Bug 249362 - sys.fs.tmpfs.times_test.{empty,non_empty} failed after (r365768, r365787]
Summary: sys.fs.tmpfs.times_test.{empty,non_empty} failed after (r365768, r365787]
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: tests (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: Konstantin Belousov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-16 09:54 UTC by Li-Wen Hsu
Modified: 2023-10-22 14:57 UTC (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 commit-hook freebsd_committer freebsd_triage 2020-09-16 09:58:45 UTC
A commit references this bug:

Author: lwhsu
Date: Wed Sep 16 09:58:16 UTC 2020
New revision: 365793
URL: https://svnweb.freebsd.org/changeset/base/365793

Log:
  Temporarily skip sys.fs.tmpfs.times_test.{empty,non_empty} in CI

  PR:		249362
  Sponsored by:	The FreeBSD Foundation

Changes:
  head/contrib/netbsd-tests/fs/tmpfs/t_times.sh
Comment 2 Li-Wen Hsu freebsd_committer freebsd_triage 2020-09-16 10:00:08 UTC
kib, can you help to check if this is related to r365783 to r365787? Should the codes or the tests be fixed? Thanks!
Comment 3 commit-hook freebsd_committer freebsd_triage 2020-09-16 21:29:20 UTC
A commit references this bug:

Author: kib
Date: Wed Sep 16 21:28:19 UTC 2020
New revision: 365810
URL: https://svnweb.freebsd.org/changeset/base/365810

Log:
  tmpfs: restore atime updates for reads from page cache.

  Split TMPFS_NODE_ACCCESSED bit into dedicated byte that can be updated
  atomically without locks or (locked) atomics.

  tn_update_getattr() change also contains unrelated bug fix.

  Reported by:	lwhsu
  PR:	249362
  Reviewed by:	markj (previous version)
  Discussed with:	mjg
  Sponsored by:	The FreeBSD Foundation
  Differential revision:	https://reviews.freebsd.org/D26451

Changes:
  head/sys/fs/tmpfs/tmpfs.h
  head/sys/fs/tmpfs/tmpfs_fifoops.c
  head/sys/fs/tmpfs/tmpfs_subr.c
  head/sys/fs/tmpfs/tmpfs_vnops.c
Comment 4 commit-hook freebsd_committer freebsd_triage 2020-09-17 07:14:43 UTC
A commit references this bug:

Author: lwhsu
Date: Thu Sep 17 07:13:42 UTC 2020
New revision: 365831
URL: https://svnweb.freebsd.org/changeset/base/365831

Log:
  Revert r249362, atime update in tmpfs is fixed in r365810

  PR:		249362
  Sponsored by:	The FreeBSD Foundation

Changes:
  head/contrib/netbsd-tests/fs/tmpfs/t_times.sh
Comment 6 Jose Luis Duran freebsd_committer freebsd_triage 2023-10-14 18:12:46 UTC
NOTE: That not the fix, it is just to illustrate that both values are always equal, and therefore failing the test.