sys/fs/tmpfs/tmpfs_fifoops.c
@@ -56,8 +56,7 @@ tmpfs_fifo_close(struct vop_close_args *v)
 	struct tmpfs_node *node;
 
 	node = VP_TO_TMPFS_NODE(v->a_vp);
-	tmpfs_set_status(VFS_TO_TMPFS(v->a_vp->v_mount), node,
-	    TMPFS_NODE_ACCESSED);
+	tmpfs_set_accessed(VFS_TO_TMPFS(v->a_vp->v_mount), node);
 	tmpfs_update(v->a_vp);
 	return (fifo_specops.vop_close(v));
 }
